done input-friendly randomizer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Method</title>
+
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="content">
-        <h1>Hello World</h1>
+    
+    <div class="container">
+        <div class="input">
+            <input type="number" id="inputNumber" class="input-number"><br>
+            <button id="sortButton" class="sort-button">Sort!</button>
+        </div>
+
+        <div class="alert alert-display-none" id="alert">blablabla</div>
+
+        <div class="array" id="array">
+        </div>
     </div>
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
